<resources>
    <string name="app_name">One Rep Max</string>
    <string name="action_settings">Settings</string>
    <string name="one_rep">One Rep!</string>
    <string name="email_hint">your email</string>
    <string name="spinner_title">Choose algorithm</string>
    <string name="Weight">Weight</string>
    <string name="Reps">Reps</string>
    <string name="weightinlbs">Weight in lbs</string>
    <string name="Reps110">1 "\u2013" 10 Reps</string>
    <string name="exercisenamestring">Activity</string>
    <string name="exercisename">Name of activity</string>
    <string name="save">Save</string>
    <string name="viewRecords">View Records</string>
    <string name="noRecordsTextMessage">No records found.</string>
</resources>
